@@ -34,3 +34,10 @@ sav_down.shp
 sav_up.shp
 sav_upup.shp
 sav_slider.shp
+gamemenu.shp
+gam_loadsave.shp
+gam_video.shp
+gam_audio.shp
+gam_gameplay.shp
+gam_quitmenu.shp
+gam_quit.shp
