@@ -33,8 +33,9 @@ protected:
 
 public:
 	friend class Gump;
-	Gump_button(Gump *par, int shnum, int px, int py)
-		: Gump_widget(par, shnum, px, py), pushed(0)
+	Gump_button(Gump *par, int shnum, int px, int py, 
+				Gumpshapefile shfile = GSF_GUMPS_VGA)
+		: Gump_widget(par, shnum, px, py, shfile), pushed(0)
 		{  }
 					// Is a given point on the checkmark?
 	int on_button(Game_window *gwin, int mx, int my)
